--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">myhomework</string>
-    <string name="title_home">Home</string>
+    <string name="title_music">Music</string>
     <string name="title_game">CardGame</string>
     <string name="title_weather">Weather</string>
     <string name="title_watch">Watch</string>
@@ -16,4 +16,9 @@
     <string name="score">Score:</string>
     <string name="reset">Reset</string>
     <string name="a">A*</string>
+    <string name="play">play</string>
+    <string name="prev">prev</string>
+    <string name="next">next</string>
+    <string name="pause">pause</string>
+    <string name="notification">notification</string>
 </resources>
