--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="notification">notification</string>
     <string name="chat">请输入聊天内容</string>
     <string name="send">发送</string>
+    <string name="text">你好!</string>
 </resources>
